# starcraft-build-overlay

./: .gitattributes  .gitignore  .prettierignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  eslint.config.mjs  index.html  package-lock.json  package.json  styles.css  tsconfig.json  tsconfig.renderer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  liquipedia_import.yml
.github/workflows/: ci.yml  release.yml
assets/: README.md
data/: builds.json
scripts/: build-renderer.mjs  dev.mjs  release.mjs  report-size.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  storage.rs  types.rs  utils.rs  window.rs
src-tauri/src/liquipedia/: api.rs  import.rs  mod.rs  parser.rs  updates.rs
src/renderer/: api.ts  dom.ts  edit-tab.ts  hotkeys.ts  import-tab.ts  index.ts  manager.ts  overlay.ts  settings-tab.ts  state.ts  toast.ts  updates-tab.ts
src/shared/: types.ts  utils.ts
